--- a/iPhone/GPS Logger/Settings.bundle/Root.plist
+++ b/iPhone/GPS Logger/Settings.bundle/Root.plist
@@ -94,6 +94,34 @@
 				<string>1</string>
 			</array>
 		</dict>
+		<dict>
+			<key>TrueValue</key>
+			<string>1</string>
+			<key>FalseValue</key>
+			<string>0</string>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Proximity Sensor</string>
+			<key>Key</key>
+			<string>enable_proximity</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>TrueValue</key>
+			<string>0</string>
+			<key>FalseValue</key>
+			<string>1</string>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Idle Timer</string>
+			<key>Key</key>
+			<string>disable_idle</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
 	</array>
 </dict>
 </plist>
